--- a/docs/test_demo_with_approvals.approved.adoc
+++ b/docs/test_demo_with_approvals.approved.adoc
@@ -9,3 +9,6 @@ include::test_demo_with_approvals.test_chapter_with_parameters_Arg_B_.approved.a
 include::test_demo_with_approvals.TestClassDemo.approved.adoc[leveloffset=+1]
 include::test_demo_with_approvals.TestClassDemo.test_first_chapter_in_a_class.approved.adoc[leveloffset=+2]
 include::test_demo_with_approvals.TestClassDemo.test_second_chapter_in_a_class.approved.adoc[leveloffset=+2]
+include::test_demo_with_approvals.TestSubClassDemo.approved.adoc[leveloffset=+1]
+include::test_demo_with_approvals.TestSubClassDemo.test_chapter_on_a_subclass.approved.adoc[leveloffset=+2]
+include::test_demo_with_approvals.TestSubClassDemo.test_second_chapter_on_a_subclass.approved.adoc[leveloffset=+2]
